push fin de journée

--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
 
 </head>
 <body>
-    <div class="wrapper">
-        <input class="nom" type="text" placeholder="Ecrivez votre nom">
-        <button type="submit">Submit</button>
+    <div class="firstexercice">
+        <h2>Exercice 1 : salutation personnalisée </h2>
+        <div class="wrapper">
+            <input class="nom" type="text" placeholder="Ecrivez votre nom">
+            <button type="submit">Submit</button>
         
+        </div>
+        <p class="coucou"></p>
     </div>
-    <p class="coucou"></p>
+<div class="secondexercice">  
+    <h2>Comparer deux nombres et afficher si le premier est plus grand que le second (ou s'il est égal), les nombres doivent être envoyés par 2 champs input de type nombre et la fonction doit se lancer au click sur un bouton de validation</h2>
+
+    <input class="input1" type="number" placeholder="Par ex : 1, 3, 10">
+    <input class="input2" type="number" placeholder="Par ex : 1, 3, 10">
+    <button class="
+    compare" type="submit">Compare !</button>
+    <p class="result2"></p>
+</div>
+
+<div class="tirdexercice">
+    <h2>Demandez à l'utilisateur son poids (en kg) et sa taille (en m) et calculez son IMC</h2>
+    <input class="poids" type="number" placeholder="En kg">
+    <input class="taille" type="number" placeholder="En mètre">
+    <button class="calculerImc">Calculez votre IMC</button>
+    <p class="resultImc"></p>
+
+</div>
     <!-- liaison js -->
 <script src="scripts/main.js"></script>
 </body>
