push fin de journée

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
     <p class="resultImc"></p>
 
 </div>
+<div class="fourthexercice">
+    <h2>Créez un champ input et un bouton de validation, ce champ servira à l'utilisateur pour entrer le nombre qu'il cherche
+        Tirez un nombre au hasard  (entre 0 (inclus) et 100 (inclus))  (avec Math)
+        Comparez le nombre entré par l'utilisateur au nombre aléatoire qui aura été choisi par votre script
+        Indiquez à l'utilisateur s'il est au-dessus ou en dessous du nombre à trouver (ce message doit disparaître après un certain temps (genre 3 secondes)) (voir setTimeout pour y parvenir)
+        Décomptez les chances qu'il a pour y arriver (maximum 5 essais)
+        Prévoyez quelque chose s'il n'est pas parvenu à trouver le nombre après 5 essais
+        Prévoyez quelque chose s'il a réussi à trouver le nombre en 5 essais</h2>
+        <p >Il vous reste <span class="compteur">5</span> chances !</p>
+        <input class="findnbr" type="text" placeholder="Entrez le nombre !">
+        <button class="submitnbr" type="submit">Tentez votre chance !</button>
+        <p class="resultatnbr"></p>
+
+</div>
     <!-- liaison js -->
 <script src="scripts/main.js"></script>
 </body>
