--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         Décomptez les chances qu'il a pour y arriver (maximum 5 essais)
         Prévoyez quelque chose s'il n'est pas parvenu à trouver le nombre après 5 essais
         Prévoyez quelque chose s'il a réussi à trouver le nombre en 5 essais</h2>
-        <p >Il vous reste <span class="compteur">5</span> chances !</p>
-        <input class="findnbr" type="text" placeholder="Entrez le nombre !">
-        <button class="submitnbr" type="submit">Tentez votre chance !</button>
+        <div>
+            <p >Il vous reste <span class="compteur">5</span> chances !</p>
+            <input class="findnbr" type="text" placeholder="Entrez le nombre !">
+            <button class="submitnbr" type="submit">Tentez votre chance !</button>
+        </div>
         <p class="resultatnbr"></p>
 </div>
 <div class="fifthexercice">
